--- a/zentimer/src/main/res/layout/activity_timer.xml
+++ b/zentimer/src/main/res/layout/activity_timer.xml
@@ -1,25 +1,40 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="20dp"
-    tools:context="com.choochootrain.zentimer.TimerActivity">
+    android:layout_height="match_parent">
 
-
-    <Chronometer android:id="@+id/chronometer"
-        style="@style/marginTop"
+    <!-- Main activity layout -->
+    <LinearLayout android:id="@+id/content_frame"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:keepScreenOn="true"
-        android:textStyle="bold"
-        android:textSize="50sp"
-        android:gravity="center"
-        android:layout_weight="1" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="20dp"
+        tools:context="com.choochootrain.zentimer.TimerActivity">
 
-    <Button android:id="@+id/timer_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/timer_button_start" />
 
-</LinearLayout>
+        <Chronometer android:id="@+id/chronometer"
+            style="@style/marginTop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:keepScreenOn="true"
+            android:textStyle="bold"
+            android:textSize="50sp"
+            android:gravity="center"
+            android:layout_weight="1" />
+
+        <Button android:id="@+id/timer_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/timer_button_start" />
+
+    </LinearLayout>
+
+    <!-- Navigation drawer layout -->
+    <ListView android:id="@+id/navigation_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice" />
+</android.support.v4.widget.DrawerLayout>
