--- a/zentimer/src/main/res/layout/activity_timer.xml
+++ b/zentimer/src/main/res/layout/activity_timer.xml
@@ -35,6 +35,7 @@
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@color/grey_menu"
         android:choiceMode="singleChoice" />
 
 </android.support.v4.widget.DrawerLayout>
