--- a/zentimer/src/main/res/values/colors.xml
+++ b/zentimer/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <resources>
 
     <color name="black_overlay">#66000000</color>
+    <color name="grey_menu">#ff393939</color>
     <color name="hyperlink">#ff33b5e5</color>
 
 </resources>
