--- a/zentimer/src/main/res/layout/activity_timer.xml
+++ b/zentimer/src/main/res/layout/activity_timer.xml
@@ -23,6 +23,12 @@
             android:gravity="center"
             android:layout_weight="1" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/timer_duration"
+            android:layout_gravity="center_horizontal" />
+
         <Button android:id="@+id/timer_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
